Add javascript page functioning

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <body>
         <header id="page-header">
             <nav class="menu">
-                <a class="menu-logo" href="index.html">Logo</a>
-                <ul id="menu-itens"></ul>
+                <a class="menu-logo">Logo</a>
+                <div id="menu-itens"></div>
             </nav>
         </header>
 
@@ -35,9 +35,21 @@
                     convallis lectus, non gravida libero mauris vitae purus.
                 </p>
             </section>
+
+            <section id="section-3" class="main-sections">
+                <h2>Section 3</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Morbi gravida, elit eget tincidunt tristique, sapien justo
+                    convallis lectus, non gravida libero mauris vitae purus.
+                </p>
+            </section>
+
+            <button id="back-top">top</button>
         </main>
 
         <footer></footer>
+
         <script src="js/app.js"></script>
     </body>
 </html>
