--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Landing Page</title>
         <link href="css/styles.css" rel="stylesheet" />
+
+        <!-- Google icons -->
+        <link
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <header id="page-header">
             <nav class="menu">
+                <span id="menu-btn" class="material-icons"> menu </span>
                 <a class="menu-logo">Logo</a>
                 <div id="menu-itens"></div>
             </nav>
