--- a/index.html
+++ b/index.html
@@ -12,44 +12,98 @@
             href="https://fonts.googleapis.com/icon?family=Material+Icons"
             rel="stylesheet"
         />
+        <!-- Google font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;400;700;900&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <header id="page-header">
             <nav class="menu">
-                <span id="menu-btn" class="material-icons"> menu </span>
-                <a class="menu-logo">Logo</a>
+                <a class="menu-logo"><img src="imgs/logo.svg" /></a>
+                <a id="menu-btn" class="material-icons"> menu </a>
                 <div id="menu-itens"></div>
             </nav>
         </header>
 
         <main>
-            <h1>Landing Page</h1>
-
             <section id="section-1" class="main-sections">
-                <h2>Section 1</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Morbi gravida, elit eget tincidunt tristique, sapien justo
-                    convallis lectus, non gravida libero mauris vitae purus.
-                </p>
+                <div class="section-txt">
+                    <span>Section 1</span>
+                    <h1>Lorem ipsum dolor sit amet</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Morbi gravida, elit eget tincidunt tristique, sapien
+                        justo convallis lectus, non gravida libero mauris vitae
+                        purus.
+                    </p>
+                </div>
+
+                <img
+                    class="section-img"
+                    src="https://source.unsplash.com/1920x1080/?dessert,sweet"
+                    alt="image description"
+                />
             </section>
 
             <section id="section-2" class="main-sections">
-                <h2>Section 2</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Morbi gravida, elit eget tincidunt tristique, sapien justo
-                    convallis lectus, non gravida libero mauris vitae purus.
-                </p>
+                <div class="section-txt">
+                    <span>Section 2</span>
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Morbi gravida, elit eget tincidunt tristique, sapien
+                        justo convallis lectus, non gravida libero mauris vitae
+                        purus.
+                    </p>
+                </div>
+
+                <img
+                    class="section-img"
+                    src="https://source.unsplash.com/1920x1080/?donuts,sweet"
+                    alt="image description"
+                />
             </section>
 
             <section id="section-3" class="main-sections">
-                <h2>Section 3</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Morbi gravida, elit eget tincidunt tristique, sapien justo
-                    convallis lectus, non gravida libero mauris vitae purus.
-                </p>
+                <div class="section-txt">
+                    <span>Section 3</span>
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Morbi gravida, elit eget tincidunt tristique, sapien
+                        justo convallis lectus, non gravida libero mauris vitae
+                        purus.
+                    </p>
+                </div>
+
+                <img
+                    class="section-img"
+                    src="https://source.unsplash.com/1920x1080/?cakes,sweet"
+                    alt="image description"
+                />
+            </section>
+
+            <section id="section-4" class="main-sections">
+                <div class="section-txt">
+                    <span>Section 4</span>
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Morbi gravida, elit eget tincidunt tristique, sapien
+                        justo convallis lectus, non gravida libero mauris vitae
+                        purus.
+                    </p>
+                </div>
+
+                <img
+                    class="section-img"
+                    src="https://source.unsplash.com/1920x1080/?candy,sweet"
+                    alt="image description"
+                />
             </section>
 
             <button id="back-top">top</button>
