--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                 <img
                     class="section-img"
-                    src="https://source.unsplash.com/1920x1080/?dessert,sweet"
+                    src="https://source.unsplash.com/collection/3431237/1920x1080"
                     alt="image description"
                 />
             </section>
@@ -63,7 +63,7 @@
 
                 <img
                     class="section-img"
-                    src="https://source.unsplash.com/1920x1080/?donuts,sweet"
+                    src="https://source.unsplash.com/collection/1806772/1920x1080"
                     alt="image description"
                 />
             </section>
@@ -101,15 +101,23 @@
 
                 <img
                     class="section-img"
-                    src="https://source.unsplash.com/1920x1080/?candy,sweet"
+                    src="https://source.unsplash.com/collection/3769541/1920x1080"
                     alt="image description"
                 />
             </section>
 
-            <button id="back-top">top</button>
+            <button id="back-top" class="material-icons">
+                keyboard_arrow_up
+            </button>
         </main>
 
-        <footer></footer>
+        <footer>
+            <img
+                class="footer-logo"
+                src="imgs/designedby.svg"
+                alt="designed by tunics"
+            />
+        </footer>
 
         <script src="js/app.js"></script>
     </body>
