Changed navigation to unordered list

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav class="menu">
                 <a class="menu-logo"><img src="imgs/logo.svg" /></a>
                 <a id="menu-btn" class="material-icons"> menu </a>
-                <div id="menu-itens"></div>
+                <ul id="menu-itens"></ul>
             </nav>
         </header>
 
