fixed scroll to section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <a id="menu-btn" class="material-icons"> menu </a>
                 <ul id="menu-itens"></ul>
             </nav>
+            <!-- <div id="menu-glass"></div> -->
         </header>
 
         <main>
